@@ -50,4 +50,7 @@ private:
 	dcpomatic::Rect<int> _last_paint_bbox;
 };
 
+typedef std::vector<boost::shared_ptr<TimelineView> > TimelineViewList;
+
+
 #endif
